--- a/statistics.html
+++ b/statistics.html
@@ -63,7 +63,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/juullabs/jobs/1796812'>Job Application for Statistical Programmer  at JUUL Labs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/juullabs/jobs/1796812'>Job Application for Statistical Programmer  at JUUL Labs</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -75,7 +75,7 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-statistical-programmer-30233'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-statistical-programmer-30233'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -88,7 +88,7 @@ presenting statistical data; and providing technical advice and assistance to?..
 <p><span class="badge badge-light">Montreal Boston Canada Taipei</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30238'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30238'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -113,7 +113,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/test-and-evaluation-statistician-mclean-va-or-bedford-ma-6517'>Test and Evaluation Statistician - McLean, VA or Bedford, MA - MITRE Careers</a></h5> 
+<h5><a href='https://mitre.referrals.selectminds.com/jobs/test-and-evaluation-statistician-mclean-va-or-bedford-ma-6517'>Test and Evaluation Statistician - McLean, VA or Bedford, MA - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -145,7 +145,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/revance/job/oFgmafwb'>Revance Therapeutics, Inc. Careers - Senior Biostatistician</a></h5> 
+<h5><a href='https://jobs.jobvite.com/revance/job/oFgmafwb'>Revance Therapeutics, Inc. Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Essential Functions: Provide expertise and guidance to the Clinical Development 
 team regarding statistical methods for data analysis of clinical trials. Provide?...</p>
@@ -265,7 +265,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30142'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30142'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -320,7 +320,7 @@ statistical aspects of study design and analysis of data from complex...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/FRByH82OB'>Research Digital Publishing Officer/Editor-in-Chief - Research &amp; Statistics Group - The Federal Reserve System Careers</a></h5> 
+<h5><a href='https://frb.referrals.selectminds.com/FRByH82OB'>Research Digital Publishing Officer/Editor-in-Chief - Research &amp; Statistics Group - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-07-18</p>
 <hr/>
@@ -365,7 +365,7 @@ standards (ADaM) and a good understanding of conversion data structure?...</p>
 <p><span class="badge badge-light">Santa Barbara California, United States</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/summitpublicschoolssps/jobs/1777742'>Job Application for AP Statistics Teacher at Summit Public Schools (SPS)</a></h5> 
+<h5><a href='https://boards.greenhouse.io/summitpublicschoolssps/jobs/1777742'>Job Application for AP Statistics Teacher at Summit Public Schools (SPS)</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -420,7 +420,7 @@ in SAS, R, Python). ? Experience with CDISC data format (SDTM and ADAM).</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-prahs.icims.com/jobs/54113/senior-statistical-programmer--remote/job'>Senior Statistical Programmer- REMOTE in</a></h5> 
+<h5><a href='https://uscareers-prahs.icims.com/jobs/54113/senior-statistical-programmer--remote/job'>Senior Statistical Programmer- REMOTE in</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Senior Statistical Programmer. Overview: Provides statistical programming 
 support for the implementation of data models and the reporting of clinical trials?...</p>
