--- a/data-analyst.html
+++ b/data-analyst.html
@@ -59,7 +59,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/geophy/49999e78-a1ad-4610-a2a7-df6a92aaa458'>GeoPhy - Senior GIS Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/geophy/49999e78-a1ad-4610-a2a7-df6a92aaa458'>GeoPhy - Senior GIS Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -67,7 +67,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/solarisbank/jobs/4371660002'>Job Application for Data Analyst Working Student (f/m/div) at solarisBank AG at solarisBank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/solarisbank/jobs/4371660002'>Job Application for Data Analyst Working Student (f/m/div) at solarisBank AG at solarisBank</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -109,7 +109,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/junior-data-analyst-13072'>Junior Data Analyst - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/junior-data-analyst-13072'>Junior Data Analyst - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -145,7 +145,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://link.join.com/jobs/252590-senior-projektleiter-analytics-data-analyst-80-100-m-w'>(Senior) Projektleiter Analytics / Data Analyst 80-100%</a></h5> 
+<h5><a href='https://link.join.com/jobs/252590-senior-projektleiter-analytics-data-analyst-80-100-m-w'>(Senior) Projektleiter Analytics / Data Analyst 80-100%</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>17. Juli 2019 ... Link Marketing Services AG has a job opening for (Senior) Projektleiter Analytics 
 / Data Analyst 80-100% (m/w) in Z?rich (published: 30.04.2019). Apply now or?...</p>
@@ -168,7 +168,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bill/3e53ff74-1cb8-4657-a4f3-0fb343a4ac7e'>Bill.com - Finance Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bill/3e53ff74-1cb8-4657-a4f3-0fb343a4ac7e'>Bill.com - Finance Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Bill.com is a leader in financial process automation for small businesses and mid-
 size companies. Making it simple to connect and do business, the Bill.com?...</p>
@@ -233,7 +233,7 @@ the entire client lifecycle and eliminates dependence on paper for financial?...
 <p>17 Jul 2019 ... Apply to M?XICO - Financial Senior Data Analyst at Linio in Ciudad de M?xico, 
 Paseo de la Reforma, Mexico.</p>
 <hr/>
-<h5><a href='https://kandidate.workable.com/j/755DAD07A1'>Kandidate - Jobs: Data & Growth Analyst (1500-2000 EUR) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kandidate.workable.com/j/755DAD07A1'>Kandidate - Jobs: Data & Growth Analyst (1500-2000 EUR) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -259,7 +259,7 @@ data into information, information into insight and insight into business?...</p
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Data Business Analyst at Payzer.</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/juullabs/jobs/1734584'>Job Application for Senior Data Analyst - Strategy & Operations at JUUL Labs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/juullabs/jobs/1734584'>Job Application for Senior Data Analyst - Strategy & Operations at JUUL Labs</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -327,7 +327,7 @@ presenting statistical data; and providing technical advice and assistance to?..
 mobile studio, HARDlight. As part of the studio's Live Operations team, you would
 ?...</p>
 <hr/>
-<h5><a href='http://bossanovarobotics.applytojob.com/apply/eSwuAmR3xV/Quality-Assurance-Data-Analyst'>Quality Assurance Data Analyst - Bossanova Robotics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/eSwuAmR3xV/Quality-Assurance-Data-Analyst'>Quality Assurance Data Analyst - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -339,7 +339,7 @@ mobile studio, HARDlight. As part of the studio's Live Operations team, you woul
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tiaa.referrals.selectminds.com/jobs/data-analyst-1973'>Data Analyst - TIAA Careers</a></h5> 
+<h5><a href='https://tiaa.referrals.selectminds.com/jobs/data-analyst-1973'>Data Analyst - TIAA Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -431,7 +431,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://dealerinspire1.applytojob.com/apply/qScttugSAa/Digital-Marketing-Data-Analyst-Naperville-IL'>Digital Marketing Data Analyst - Naperville, IL - Dealer Inspire - Career Page</a></h5> 
+<h5><a href='http://dealerinspire1.applytojob.com/apply/qScttugSAa/Digital-Marketing-Data-Analyst-Naperville-IL'>Digital Marketing Data Analyst - Naperville, IL - Dealer Inspire - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -474,7 +474,7 @@ planning and analysis (FP&A) integrated analytics team, maintain responsibility?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://605.workable.com/jobs/1042296'>Data Analyst - Apply online - 605 - Jobs</a></h5> 
+<h5><a href='https://605.workable.com/jobs/1042296'>Data Analyst - Apply online - 605 - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Data Analyst at 605. ... Data Analyst. Data Analyst. 
 Syosset, New York, United States ? Data Solutions. Description. ABOUT 605.</p>
